--- a/BoilerPlate/BoilerPlate.vcxproj
+++ b/BoilerPlate/BoilerPlate.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="MouseHandler.h" />
     <ClInclude Include="ObjLoader.h" />
+    <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="PhysicsConstants.h" />
     <ClInclude Include="PhysicsEntity.h" />
     <ClInclude Include="PhysicsWorld.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="MouseHandler.cpp" />
     <ClCompile Include="ObjLoader.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="PhysicsConstants.cpp" />
     <ClCompile Include="PhysicsEntity.cpp" />
     <ClCompile Include="PhysicsWorld.cpp" />
@@ -217,6 +219,10 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Water.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\OpenGL_Testing\res\shaders\ParticleFragmentDefaultShader.glsl" />
+    <None Include="..\OpenGL_Testing\res\shaders\ParticleVertexDefaultShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
