--- a/BoilerPlate/BoilerPlate.vcxproj.filters
+++ b/BoilerPlate/BoilerPlate.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="Maths.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ParticleSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoilerPlate.cpp">
@@ -218,5 +221,16 @@
     <ClCompile Include="Maths.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\OpenGL_Testing\res\shaders\ParticleFragmentDefaultShader.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\OpenGL_Testing\res\shaders\ParticleVertexDefaultShader.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
