--- a/OpenGL_Testing/OpenGL_Testing.vcxproj.filters
+++ b/OpenGL_Testing/OpenGL_Testing.vcxproj.filters
@@ -75,6 +75,12 @@
     <None Include="res\shaders\waterVShader.glsl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\shaders\snakeFShader.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\snakeVShader.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Heartbeat.cpp">
