--- a/OpenGL_Testing/OpenGL_Testing.vcxproj.filters
+++ b/OpenGL_Testing/OpenGL_Testing.vcxproj.filters
@@ -92,7 +92,7 @@
     <ClCompile Include="src\SphereDistace.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Snake.cpp">
+    <ClCompile Include="src\Snake.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -106,7 +106,7 @@
     <ClInclude Include="Strings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Snake.h">
+    <ClInclude Include="include\Snake.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
