--- a/BoilerPlate/BoilerPlate.vcxproj
+++ b/BoilerPlate/BoilerPlate.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Framebuffer.h" />
+    <ClInclude Include="hash_table.h" />
     <ClInclude Include="ImageLoader.h" />
     <ClInclude Include="KeyHandler.h" />
     <ClInclude Include="LoadAudio.h" />
@@ -203,6 +204,7 @@
     <ClCompile Include="Constants.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
+    <ClCompile Include="hash_table.cpp" />
     <ClCompile Include="ImageLoader.cpp" />
     <ClCompile Include="KeyHandler.cpp" />
     <ClCompile Include="LoadAudio.cpp" />
